--- a/visualization/viewer/package.json
+++ b/visualization/viewer/package.json
@@ -5,6 +5,8 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@types/randomcolor": "^0.5.5",
+    "@types/three": "^0.129.1",
     "dat.gui": "0.7.6",
     "randomcolor": "^0.6.2",
     "react": "16.8.6",
@@ -12,7 +14,7 @@
     "react-scripts": "2.1.8",
     "simplex-noise": "2.4.0",
     "stats-js": "1.0.1",
-    "three": "0.104.0",
+    "three": "^0.129.0",
     "three-gltf-loader": "1.108.0",
     "three-obj-mtl-loader": "1.0.3",
     "three-orbitcontrols": "2.102.1"
