--- a/test/pom.xml
+++ b/test/pom.xml
@@ -18,6 +18,12 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-math3</artifactId>
+		    <version>${commons-math3.version}</version>
+		</dependency>
+	
 		<!-- test -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
