Various more incomplete changes

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -13,6 +13,10 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
+			<artifactId>extremepoints</artifactId>
+		</dependency>  	
 		<!-- test -->
 		<dependency>
 			<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
