--- a/jmh/pom.xml
+++ b/jmh/pom.xml
@@ -18,7 +18,11 @@
 		<dependency>
 			<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 			<artifactId>core</artifactId>
-		</dependency>    
+		</dependency>
+		<dependency>
+			<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
+			<artifactId>extreme-points</artifactId>
+		</dependency> 		
 		<dependency>
 			<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 			<artifactId>test</artifactId>
