--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -28,5 +28,8 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-v2-
     - name: Build with Maven
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}    
       run: mvn -B verify --file pom.xml -B verify sonar:sonar -Dsonar.projectKey=3d-bin-container-packing -Dsonar.organization=skjolber-github -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
 
