--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<mockito.version>4.2.0</mockito.version>
 		<ascii-renderer.version>2.2.0</ascii-renderer.version>
 
+		<eclipse-collections.version>11.0.0</eclipse-collections.version>
 		<google-truth.version>1.1.3</google-truth.version>
 		<junit.version>5.8.2</junit.version>
 		<jmh.version>1.34</jmh.version>
@@ -112,6 +113,11 @@
 				<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 				<artifactId>visualizer-algorithm</artifactId>
 				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.eclipse.collections</groupId>
+			    <artifactId>eclipse-collections</artifactId>
+			    <version>${eclipse-collections.version}</version>
 			</dependency>
 
 			<!-- test -->
