--- a/extreme-points/pom.xml
+++ b/extreme-points/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.0.4-SNAPSHOT</version>
+		<version>2.0.4</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>extreme-points</artifactId>
