--- a/extreme-points/pom.xml
+++ b/extreme-points/pom.xml
@@ -40,6 +40,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+			<scope>test</scope>
+		</dependency>			
+		<dependency>
 			<groupId>com.indvd00m.ascii.render</groupId>
 			<artifactId>ascii-render</artifactId>
 			<scope>test</scope>
