--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,8 +6,6 @@ name: Java CI with Maven
 on:
   push:
     branches: [ '**' ]
-  pull_request:
-    branches: [ '**' ]
 
 jobs:
   build-with-maven-cache-github-action:
@@ -18,6 +16,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
+        distribution: 'temurin'
     - name: Restore cache
       uses: skjolber/maven-cache-github-action@v1
       with:
@@ -28,21 +27,4 @@ jobs:
       uses: skjolber/maven-cache-github-action@v1
       with:
         step: save
-  build-with-github-cache:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
-      with:
-        java-version: 11
-    - uses: actions/cache@v2
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-v1-${{ hashFiles('**/pom.xml') }}    
-        restore-keys: |
-          ${{ runner.os }}-maven-v1-
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
 
