--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -3,7 +3,10 @@
  
 name: SonarCloud  QA
 
-on: [push, pull_request] 
+on:
+  push:
+    branches:
+      - master
  
 jobs:
   build:
@@ -18,8 +21,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v3
       with:
+        distribution: 'temurin'
         java-version: 11
     - uses: actions/cache@v2
       with:
