--- a/core/pom.xml
+++ b/core/pom.xml
@@ -47,6 +47,16 @@
 			<artifactId>truth</artifactId>
 			<scope>test</scope>
 		</dependency>
+    <dependency>
+      <groupId>com.pholser</groupId>
+      <artifactId>junit-quickcheck-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.pholser</groupId>
+      <artifactId>junit-quickcheck-generators</artifactId>
+      <scope>test</scope>
+    </dependency>
 		<dependency>
 			<groupId>com.google.truth.extensions</groupId>
 			<artifactId>truth-java8-extension</artifactId>
