--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,8 @@
 		<ascii-renderer.version>2.2.0</ascii-renderer.version>
 
 		<eclipse-collections.version>11.0.0</eclipse-collections.version>
-		<google-truth.version>1.1.3</google-truth.version>
+    <google-truth.version>1.1.3</google-truth.version>
+    <junit-quicktest.version>1.0</junit-quicktest.version>
 		<junit.version>5.8.2</junit.version>
 		<jmh.version>1.34</jmh.version>
 		<commons-io.version>2.11.0</commons-io.version>
@@ -157,7 +158,19 @@
 				<version>${google-truth.version}</version>
 				<scope>test</scope>
 			</dependency>
-			<dependency>
+      <dependency>
+        <groupId>com.pholser</groupId>
+        <artifactId>junit-quickcheck-core</artifactId>
+        <version>${junit-quicktest.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.pholser</groupId>
+        <artifactId>junit-quickcheck-generators</artifactId>
+        <version>${junit-quicktest.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-core</artifactId>
 				<version>${mockito.version}</version>
