--- a/pom.xml
+++ b/pom.xml
@@ -239,7 +239,7 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${maven-surefire-plugin.version}</version>
 					<configuration>
-						<forkCount>1</forkCount>
+						<forkCount>1.5C</forkCount>
 						<reuseForks>true</reuseForks>
 						<redirectTestOutputToFile>true</redirectTestOutputToFile>
 					</configuration>
