--- a/test/pom.xml
+++ b/test/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.2.17-SNAPSHOT</version>
+		<version>1.2.17</version>
 	</parent>
 	<artifactId>test</artifactId>
 
