--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
 		<ascii-renderer.version>2.2.0</ascii-renderer.version>
 
 		<eclipse-collections.version>11.0.0</eclipse-collections.version>
-    <google-truth.version>1.1.3</google-truth.version>
-    <junit-quicktest.version>1.0</junit-quicktest.version>
+		<google-truth.version>1.1.3</google-truth.version>
+		<junit-quicktest.version>1.0</junit-quicktest.version>
 		<junit.version>5.8.2</junit.version>
 		<jmh.version>1.35</jmh.version>
 		<commons-io.version>2.11.0</commons-io.version>
@@ -89,7 +89,7 @@
 				<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 				<artifactId>extreme-points</artifactId>
 				<version>${project.version}</version>
-			</dependency>  	
+			</dependency>
 			<dependency>
 				<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 				<artifactId>core</artifactId>
@@ -116,9 +116,14 @@
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-			    <groupId>org.eclipse.collections</groupId>
-			    <artifactId>eclipse-collections</artifactId>
-			    <version>${eclipse-collections.version}</version>
+				<groupId>org.eclipse.collections</groupId>
+				<artifactId>eclipse-collections</artifactId>
+				<version>${eclipse-collections.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-math3</artifactId>
+				<version>${commons-math3.version}</version>
 			</dependency>
 
 			<!-- test -->
@@ -133,7 +138,7 @@
 				<artifactId>junit-jupiter-params</artifactId>
 				<version>${junit.version}</version>
 				<scope>test</scope>
-			</dependency>			
+			</dependency>
 			<dependency>
 				<groupId>org.junit.jupiter</groupId>
 				<artifactId>junit-jupiter-engine</artifactId>
@@ -158,19 +163,19 @@
 				<version>${google-truth.version}</version>
 				<scope>test</scope>
 			</dependency>
-      <dependency>
-        <groupId>com.pholser</groupId>
-        <artifactId>junit-quickcheck-core</artifactId>
-        <version>${junit-quicktest.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>com.pholser</groupId>
-        <artifactId>junit-quickcheck-generators</artifactId>
-        <version>${junit-quicktest.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
+			<dependency>
+				<groupId>com.pholser</groupId>
+				<artifactId>junit-quickcheck-core</artifactId>
+				<version>${junit-quicktest.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.pholser</groupId>
+				<artifactId>junit-quickcheck-generators</artifactId>
+				<version>${junit-quicktest.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-core</artifactId>
 				<version>${mockito.version}</version>
@@ -204,9 +209,9 @@
 				<version>${commons-io.version}</version>
 			</dependency>
 			<dependency>
-			    <groupId>com.fasterxml.jackson.core</groupId>
-			    <artifactId>jackson-databind</artifactId>
-			    <version>${jackson.version}</version>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
