--- a/test/pom.xml
+++ b/test/pom.xml
@@ -25,8 +25,11 @@
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-math3</artifactId>
-		    <version>${commons-math3.version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		</dependency>		
 		<!-- test -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
