--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.0.12-SNAPSHOT</version>
+		<version>2.1.0</version>
 	</parent>
 	<artifactId>api</artifactId>
 
