--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.1.4-SNAPSHOT</version>
+		<version>2.1.4</version>
 	</parent>
 	<artifactId>core</artifactId>
 
