Improve visualizer for LAFF

--- a/visualizer/packaging/pom.xml
+++ b/visualizer/packaging/pom.xml
@@ -24,6 +24,14 @@
 		</dependency>
 		<dependency>
 			<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
+			<artifactId>api</artifactId>
+		</dependency>		
+		<dependency>
+			<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
+			<artifactId>extreme-points</artifactId>
+		</dependency>		
+		<dependency>
+			<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 			<artifactId>test</artifactId>
 			<scope>test</scope>
 		</dependency>
