--- a/open-api/open-api-model/pom.xml
+++ b/open-api/open-api-model/pom.xml
@@ -1,12 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
-		<artifactId>openapi-parent</artifactId>
+		<artifactId>open-api-parent</artifactId>
 		<version>4.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
-	<artifactId>openapi-client</artifactId>
+	<artifactId>open-api-model</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>io.swagger</groupId>
@@ -17,16 +17,16 @@
 			<artifactId>httpclient5</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.openapitools</groupId>
@@ -37,37 +37,35 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
-			<artifactId>openapi-model</artifactId>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<scope>test</scope>
+		    <groupId>jakarta.validation</groupId>
+		    <artifactId>jakarta.validation-api</artifactId>
 		</dependency>
-		<dependency>
-		    <groupId>com.google.truth.extensions</groupId>
-		    <artifactId>truth-java8-extension</artifactId>
-			<scope>test</scope>
-		</dependency>			
-		<dependency>
-		    <groupId>com.google.truth</groupId>
-		    <artifactId>truth</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
-			<artifactId>openapi-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
-			<artifactId>openapi-server</artifactId>
-		    <scope>test</scope>
-		</dependency>
+		
 	</dependencies>
 	<build>
 		<plugins>
+			<!--
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>exec</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<executable>./transfer.sh</executable>
+				</configuration>
+			</plugin>
+			-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -81,27 +79,26 @@
 							<goal>generate</goal>
 						</goals>
 						<configuration>
-							<inputSpec>${maven.multiModuleProjectDirectory}/openapi/openapi-model/src/main/resources/3d-api.yaml</inputSpec>
+							<inputSpec>${project.basedir}/src/main/resources/3d-api.yaml</inputSpec>
 							<generatorName>java</generatorName>
 							<configOptions>
 								<sourceFolder>src/gen/java/main</sourceFolder>
 								<useJakartaEe>true</useJakartaEe>
 								<serializationLibrary>jackson</serializationLibrary>
-								<openApiNullable>false</openApiNullable>
+								<open-apiNullable>false</open-apiNullable>
 								
 							    <additionalModelTypeAnnotations>
 								 @com.fasterxml.jackson.annotation.JsonInclude(com.fasterxml.jackson.annotation.JsonInclude.Include.NON_NULL)
 							    </additionalModelTypeAnnotations>								
 							</configOptions>
-							<!-- https://openapi-generator.tech/docs/generators/java/ -->
+							<!-- https://open-api-generator.tech/docs/generators/java/ -->
 							<library>apache-httpclient</library>
 							<additionalProperties>supportUrlQuery=false</additionalProperties>
-						
-							<generateApis>true</generateApis>
-							<generateModels>false</generateModels>
-							<generateSupportingFiles>true</generateSupportingFiles>
-												
-                            <apiPackage>com.github.skjolber.packing.openapi.client.api</apiPackage>
+							
+							<generateApis>false</generateApis>
+							<generateModels>true</generateModels>
+							<generateSupportingFiles>false</generateSupportingFiles>
+
                             <modelPackage>com.github.skjolber.packing.openapi.model</modelPackage>
                             <invokerPackage>com.github.skjolber.packing.openapi.invoker</invokerPackage>
 						</configuration>
