--- a/open-api/open-api-server/pom.xml
+++ b/open-api/open-api-server/pom.xml
@@ -1,20 +1,16 @@
-	<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
-		<artifactId>openapi-parent</artifactId>
+		<artifactId>open-api-parent</artifactId>
 		<version>4.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
-	</parent>
-	<artifactId>openapi-model</artifactId>
+	</parent>	
+	<artifactId>open-api-server</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>io.swagger</groupId>
 			<artifactId>swagger-annotations</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.httpcomponents.client5</groupId>
-			<artifactId>httpclient5</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -25,8 +21,12 @@
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>jakarta.validation</groupId>
+		    <artifactId>jakarta.validation-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.openapitools</groupId>
@@ -37,35 +37,20 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>jakarta.annotation</groupId>
-			<artifactId>jakarta.annotation-api</artifactId>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-web</artifactId>
 		</dependency>
 		<dependency>
-		    <groupId>jakarta.validation</groupId>
-		    <artifactId>jakarta.validation-api</artifactId>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-context</artifactId>
 		</dependency>
-		
+		<dependency>
+			<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
+			<artifactId>open-api-model</artifactId>
+		</dependency>		
 	</dependencies>
 	<build>
 		<plugins>
-			<!--
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>exec</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>exec</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<executable>./transfer.sh</executable>
-				</configuration>
-			</plugin>
-			-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -79,26 +64,26 @@
 							<goal>generate</goal>
 						</goals>
 						<configuration>
-							<inputSpec>${project.basedir}/src/main/resources/3d-api.yaml</inputSpec>
-							<generatorName>java</generatorName>
+							<inputSpec>${project.basedir}/../open-api-model/src/main/resources/3d-api.yaml</inputSpec>
+							<generatorName>spring</generatorName>
 							<configOptions>
 								<sourceFolder>src/gen/java/main</sourceFolder>
 								<useJakartaEe>true</useJakartaEe>
-								<serializationLibrary>jackson</serializationLibrary>
-								<openApiNullable>false</openApiNullable>
-								
-							    <additionalModelTypeAnnotations>
-								 @com.fasterxml.jackson.annotation.JsonInclude(com.fasterxml.jackson.annotation.JsonInclude.Include.NON_NULL)
-							    </additionalModelTypeAnnotations>								
+								<useSpringBoot3>true</useSpringBoot3>
+								<documentationProvider>none</documentationProvider>
+								<useTags>true</useTags>
+								<interfaceOnly>true</interfaceOnly>
 							</configOptions>
-							<!-- https://openapi-generator.tech/docs/generators/java/ -->
-							<library>apache-httpclient</library>
-							<additionalProperties>supportUrlQuery=false</additionalProperties>
-							
-							<generateApis>false</generateApis>
-							<generateModels>true</generateModels>
-							<generateSupportingFiles>false</generateSupportingFiles>
+							<!-- https://open-api-generator.tech/docs/generators/spring/ -->
+							<library>spring-boot</library>
+							<generateApiDocumentation>false</generateApiDocumentation>
+							<skipOperationExample>true</skipOperationExample>
 
+							<generateApis>true</generateApis>
+							<generateModels>false</generateModels>
+							<generateSupportingFiles>false</generateSupportingFiles>
+												
+                            <apiPackage>com.github.skjolber.packing.openapi.server.api</apiPackage>
                             <modelPackage>com.github.skjolber.packing.openapi.model</modelPackage>
                             <invokerPackage>com.github.skjolber.packing.openapi.invoker</invokerPackage>
 						</configuration>
@@ -112,7 +97,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-			</plugin>				
+			</plugin>							
 		</plugins>
 	</build>
 </project>
