--- a/open-api/open-api-test/pom.xml
+++ b/open-api/open-api-test/pom.xml
@@ -2,11 +2,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
-		<artifactId>openapi-parent</artifactId>
+		<artifactId>open-api-parent</artifactId>
 		<version>4.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>	
-	<artifactId>openapi-test</artifactId>
+	<artifactId>open-api-test</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>org.mockito</groupId>
@@ -14,11 +14,11 @@
 		</dependency>
 		<dependency>
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
-			<artifactId>openapi-model</artifactId>
+			<artifactId>open-api-model</artifactId>
 		</dependency>		
 		<dependency>
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
-			<artifactId>openapi-server</artifactId>
+			<artifactId>open-api-server</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
