--- a/open-api/open-api-server/pom.xml
+++ b/open-api/open-api-server/pom.xml
@@ -9,7 +9,7 @@
 	<artifactId>open-api-server</artifactId>
 	<dependencies>
 		<dependency>
-			<groupId>io.swagger</groupId>
+			<groupId>io.swagger.core.v3</groupId>
 			<artifactId>swagger-annotations</artifactId>
 		</dependency>
 		<dependency>
